--- a/.vitepress/theme/style/var.css
+++ b/.vitepress/theme/style/var.css
@@ -81,6 +81,15 @@ h1 {
   -webkit-text-fill-color: transparent;
 }
 
+/* 修改h2标题颜色 */
+/* .vitepress/theme/style/var.css */
+h2 {
+  background: -webkit-linear-gradient(10deg, #dc9748 5%, #56b1bb 15%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 /* 去掉链接下划线 */
 /* var.css */
 .vp-doc a {
